fixing build and layout issue

--- a/ui/packages/ui/src/app/components/formHelpers/FormMaskHashSaltComponent.css
+++ b/ui/packages/ui/src/app/components/formHelpers/FormMaskHashSaltComponent.css
@@ -9,3 +9,8 @@
         font-size: var(--pf-global--FontSize--sm);
     }
 }
+.pf-l-flex{
+    &-nowrap{
+        flex-wrap: nowrap;
+    }
+}
